--- a/Uber_Lyft_Dataset_Boston.ipynb
+++ b/Uber_Lyft_Dataset_Boston.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/XxlLLIG6ov4ghiN0I91u",
+      "authorship_tag": "ABX9TyN134FG/WokiAVpx5epmQgJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,18 +38,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this project, the goal is to develop the inference model to predict the price of Uber and Lyft rides in the Boston MA.\n",
-        "The dataset consists of almost 0.7 million examples with missing values.\n",
+        "In this project, the goal is to develop a regression model to predict the price of Uber and Lyft rides in Boston MA. The dataset consists of almost 0.7 million examples with missing values with the following details:\n",
         "\n",
-        "1. Problem type: supervised (regression)\n",
-        "2. Target variable: price\n",
-        "3. Features are related to distance, date, location, temperature, climate and sunset.\n",
+        "1. Features are related to distance, date, location, temperature, climate, and sunset.\n",
+        "2. Target variable: price (continuous numerical dtype)\n",
+        "3. Problem type: supervised (regression)\n",
+        "\n",
         "\n",
         "Machine learning pipeline:\n",
-        "1. Data import, wrangling and visualization.\n",
-        "2. Data preparation and split.\n",
-        "3. Models: Linear, Polynomial, ElasticNet and Neural network regression.\n",
-        "4. Evaluation Metric: mean square error, root mean square error and $R^2$(coefficient of determination) score."
+        "1. Import the dataset, handle the missing values, observe the correlation map, and visualize the different attributes.\n",
+        "2. Prepare the dataset using one-hot encoding and split the dataset.\n",
+        "3. Train the models that include Linear, Polynomial, ElasticNet, and Neural network regression.\n",
+        "4. Evaluation Metric contains a mean square error (MSE), root mean square error (RMSE), and $R^2$(coefficient of determination) score."
       ],
       "metadata": {
         "id": "GOePkILYpd_W"
@@ -91,7 +91,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This dataset is about uber and lyft rides. It contains the information of rides type, price, distance, surge_multiplier, climate, location and sunset.[Link](https://www.kaggle.com/datasets/brllrb/uber-and-lyft-dataset-boston-ma)\n",
+        "This dataset is about uber and lyft rides. It contains the information of rides type, price, distance, surge_multiplier, climate, location and sunset. [Link](https://www.kaggle.com/datasets/brllrb/uber-and-lyft-dataset-boston-ma)\n",
         "\n",
         "\n",
         "The kaggle API file is used to download the dataset from kaggle website via command line. [Link](https://www.youtube.com/watch?v=gwDOUuBH7ws&t=345s)"
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "gFrG75pEuWVO"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "id": "8uo8xMCvZvN3",
         "outputId": "66c62b29-794e-4959-90f4-3b9a43185f7f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "id": "rpmhnV9yaQ9I",
         "outputId": "60ac4d44-1f7d-4ac7-8b17-57043da910a8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "xG2bcEXGNcdO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
         "id": "t6NFIsdQfeZR",
         "outputId": "6c8006d3-163f-4668-ed03-a9e15e3a38a3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +228,7 @@
         "id": "noMHctGOfOMR",
         "outputId": "5f139c9b-d1e4-4c12-80d4-49b93e3ab0c9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "id": "li4WAIu7aMJx",
         "outputId": "c1918b1d-bbb2-40e6-a048-40c3f243e898"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +761,7 @@
         "id": "Jp0RvqZcmyoy",
         "outputId": "d4984826-5e42-4aa4-c713-7a1e056e6073"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +794,7 @@
       "cell_type": "markdown",
       "source": [
         "##Get/correct the datetime\n",
-        "pd.to_datetime function is used to calculayte the datetime feature from the timestamp or to correct the data type of the datatime. This features is very useful to\n",
+        "pd.to_datetime function is used to calculate the datetime feature from the timestamp or to correct the data type of the datatime. This features is very useful to\n",
         "\n",
         "*   Merge the datasets.\n",
         "*   Visualize/explore the data values to get new insights.\n",
@@ -813,7 +813,7 @@
       "metadata": {
         "id": "ynu3sUo7aTT-"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -828,7 +828,7 @@
         "id": "YckS-FMMcUqp",
         "outputId": "a6e8b14e-7540-4ea1-ac9e-de0f4e1f5997"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,7 +905,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data Imputation to handle missing values\n",
+        "## Data imputation to handle missing values\n",
         "Missing values are identified in each attribute of the dataset. It can be treated using following techniques\n",
         "\n",
         "\n",
@@ -930,7 +930,7 @@
         "id": "dqaNzOLvcXpB",
         "outputId": "2eb9c78d-6cc7-4763-ebd3-db91f74e7805"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1018,7 @@
       "metadata": {
         "id": "jJAPp1gFcqtG"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1033,7 +1033,7 @@
         "id": "JcUE36Btdphh",
         "outputId": "8bd62961-ec95-41c6-aeb4-e40d955b9438"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1116,7 +1116,7 @@
         "id": "fJgSJFj0dsAk",
         "outputId": "78b005a2-e6d8-464a-cb30-f6f79881d208"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1138,9 +1138,9 @@
         "\n",
         "Figure 2: Rain and clouds are the climate factors for higher surge multiplier.\n",
         "\n",
-        "Figure 3: Long distances should be perfect direct proportion to the price. but we have not observed that relation. It means there are other factors like surge_multiplier who affect the ride price.\n",
+        "Figure 3: Long distances should be strong positive correlation to the price. but we have not observed that relation. It means there are other factors like surge_multiplier who affect the ride price.\n",
         "\n",
-        "Figure 4: People did not prefer to go for long distances when the surge_multiplier is highest."
+        "Figure 4: People do not prefer to travel long distances on Uber/Lyft when the surge_multiplier is higher."
       ],
       "metadata": {
         "id": "p3BEO7xJjSm-"
@@ -1164,7 +1164,7 @@
         },
         "outputId": "756a95b1-8759-41ec-ee99-70d7052f9a9d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,7 +1213,7 @@
         },
         "outputId": "8858ed35-a0b6-4218-fc11-e173a4142395"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1258,7 +1258,7 @@
         },
         "outputId": "5d0a6a1c-57a5-4d9a-c8f8-e7b6ed0d57a4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1525,7 +1525,7 @@
       "metadata": {
         "id": "_q7S1xhJufsR"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1540,7 +1540,7 @@
         "id": "ZyR9KtIj4Ay0",
         "outputId": "cc542dd6-298c-4688-a32a-16f61087133c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,7 @@
       "cell_type": "markdown",
       "source": [
         "# Data Preparation and Data Saggregation/Split\n",
-        "Select the numerical columns which can be used for scaling (Normalization) and categorical columns are chosen for one hot encodding."
+        "Select the numerical columns which can be used for scaling (Normalization) and categorical columns for one hot encodding."
       ],
       "metadata": {
         "id": "m5bOYFEiqF98"
@@ -1592,7 +1592,7 @@
         "id": "UiCelY3UqlEe",
         "outputId": "ff8a6b89-cc0f-44c1-ea15-fa6d1d27337e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1626,7 @@
         "id": "U1SVXNdKvSvO",
         "outputId": "47d161a8-976a-463b-c804-f4ff1a465fe1"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1656,7 +1656,7 @@
         "id": "q9SkhWTJvWV9",
         "outputId": "62aad353-030f-436f-db00-3488b48d7b7d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2089,7 +2089,7 @@
         "id": "1Thgp3S5yppp",
         "outputId": "0cf4ccc0-fc63-44eb-f057-c1534bd1d359"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2714,7 +2714,7 @@
       "metadata": {
         "id": "-3pTuoDiw25e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2725,7 +2725,7 @@
       "metadata": {
         "id": "46fcKzCawxrt"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2741,7 +2741,7 @@
         "id": "aBWRdcxHw_02",
         "outputId": "ba8a1a3d-7eea-4e96-decf-bed2fcd38cae"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2764,7 +2764,7 @@
       "metadata": {
         "id": "l8dAigPvxB5c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2775,7 +2775,7 @@
       "metadata": {
         "id": "b8v1aDF4oJJ4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2786,7 +2786,7 @@
       "metadata": {
         "id": "hBvnMFvBpC-Y"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2797,7 +2797,7 @@
       "metadata": {
         "id": "nibIN6r_qqUy"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2808,7 +2808,7 @@
       "metadata": {
         "id": "WnrOTDhLofE5"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2820,7 +2820,7 @@
       "metadata": {
         "id": "LgLUZ2_En0LU"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2831,7 +2831,7 @@
       "metadata": {
         "id": "pOsdIyd-oLps"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2895,7 +2895,7 @@
         "id": "kkTPdGtaAYxS",
         "outputId": "779356cb-7d09-4fda-e1db-3723a5da1d5b"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2935,7 +2935,7 @@
       "metadata": {
         "id": "j0RtC4zDwraO"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2978,7 +2978,7 @@
         },
         "outputId": "550867a3-f11a-44f5-a5a4-471144bc436c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3055,7 +3055,7 @@
         "id": "n7--f3hdpq6r",
         "outputId": "d0d1ee94-a869-43eb-ffaf-422abb2d4ca1"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3112,7 +3112,7 @@
       "metadata": {
         "id": "fQYVoiBJrl7F"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3124,7 +3124,7 @@
       "metadata": {
         "id": "gnV49T34tDFT"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3136,7 +3136,7 @@
       "metadata": {
         "id": "QyI8t9IAtp_7"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3148,7 +3148,7 @@
       "metadata": {
         "id": "fCeF8aOSuBTm"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3164,7 +3164,7 @@
         "id": "m8HBTWtkvU5_",
         "outputId": "5488702e-9579-4e82-95e4-e86b885d10c9"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3226,7 +3226,7 @@
         "id": "d2cZ313Wrfcd",
         "outputId": "48f1228d-7255-491c-8251-f2fd636528ca"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3310,7 +3310,7 @@
         "id": "EnJW9QJ7Vdgi",
         "outputId": "27034981-3c39-48a4-f1ed-d90ef353e260"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3379,7 +3379,7 @@
       "metadata": {
         "id": "dhJCJmz5xOuI"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3397,7 +3397,7 @@
       "metadata": {
         "id": "jc4ln6KOy9f-"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3418,7 +3418,7 @@
         "id": "6H8J1EWlzAQk",
         "outputId": "990361ec-496c-4e31-acd3-aa55ab35047d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3478,7 +3478,7 @@
         "id": "dGnZamBUzdIS",
         "outputId": "e23fe1f8-d5a5-4cd4-d705-91b585cd47d2"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3509,7 +3509,7 @@
         "id": "KilzWci0zgB5",
         "outputId": "a17c535a-db61-4768-aa07-45ae5531aa03"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
